force-app/main/default/objects/Forecast_Unit_Period__c/Forecast_Unit_Period__c.object-meta.xml
<CustomObject>
    <description>Forecast period (month) of a forecast unit.</description>
    <label>Forecast Unit Period</label>
    <nameField>
        <label>Forecast Unit Period</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Unit Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>