force-app/main/default/objects/Forecast_Unit_Period__c/fields/a4a_Budget__c.field-meta.xml
<CustomField>
    <fullName>a4a_Budget__c</fullName>
    <formula>Year(History_Month__c)=2020
&amp;&amp;
LEN(a4a_Key_Budget_Quantity__c)&gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Budget</label>
    <type>Checkbox</type>
</CustomField>