force-app/main/default/objects/Forecast_Unit_Period__c/fields/Account_Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_No__c</fullName>
    <description>Abacus customer number</description>
    <formula>Forecast_Unit__r.Account__r.Customer_No__c</formula>
    <inlineHelpText>Abacus customer number</inlineHelpText>
    <label>Account Customer No</label>
    <type>Text</type>
</CustomField>