force-app/main/default/objects/Forecast_Unit_Period__c/fields/Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Forecast Unit Periods</relationshipLabel>
    <relationshipName>Forecast_Unit_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>