force-app/main/default/objects/Forecast_Unit_Period__c/fields/Account_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_ID__c</fullName>
    <formula>Forecast_Unit__r.Account__r.OwnerId</formula>
    <label>Account Owner ID</label>
    <type>Text</type>
</CustomField>