force-app/main/default/objects/Forecast_Unit_Period__c/fields/Actual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sales__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>