force-app/main/default/objects/Forecast_Unit_Period__c/fields/Actual_Sales_CHF__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sales_CHF__c</fullName>
    <inlineHelpText>Actual Sales plus order book of current month</inlineHelpText>
    <label>Actual Sales + OB CHF</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>