force-app/main/default/objects/Forecast_Unit_Period__c/fields/Actual_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sales_Price__c</fullName>
    <formula>Forecast_Unit__r.Actual_Sales_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>