force-app/main/default/objects/Forecast_Unit_Period__c/fields/API_Workflow_Rule__c.field-meta.xml
<CustomField>
    <fullName>API_Workflow_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This fields is for API purposes to not update &apos;Month&apos; when &apos;Manual Forecast&apos; is changed. The field is defined in the workflow rule FUP: Update Last Forecast Manual Update, ID: 01QD0000000CDtF</description>
    <label>API Workflow Rule</label>
    <type>Checkbox</type>
</CustomField>