force-app/main/default/objects/Forecast_Unit_Period__c/fields/Budget_Actual_FP_formula__c.field-meta.xml
<CustomField>
    <fullName>Budget_Actual_FP_formula__c</fullName>
    <formula>IF(
YEAR(TODAY())
=
YEAR(History_Month__c)
,
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Actual FP formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>