force-app/main/default/objects/Forecast_Unit_Period__c/fields/Budget_Contribution_CHF__c.field-meta.xml
<CustomField>
    <fullName>Budget_Contribution_CHF__c</fullName>
    <description>Calculated in Excel based on COGS Roadmap.</description>
    <label>Budget Contribution CHF</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>