force-app/main/default/objects/Forecast_Unit_Period__c/fields/Budget_Contribution_Optimum_CHF__c.field-meta.xml
<CustomField>
    <fullName>Budget_Contribution_Optimum_CHF__c</fullName>
    <inlineHelpText>From sales budget</inlineHelpText>
    <label>Budget Contribution Optimum CHF</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>