force-app/main/default/objects/Forecast_Unit_Period__c/fields/Budget_next_FP__c.field-meta.xml
<CustomField>
    <fullName>Budget_next_FP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budget next FP</label>
    <type>Checkbox</type>
</CustomField>