force-app/main/default/objects/Forecast_Unit_Period__c/fields/Budget_Optimum__c.field-meta.xml
<CustomField>
    <fullName>Budget_Optimum__c</fullName>
    <label>Budget Optimum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>