force-app/main/default/objects/Forecast_Unit_Period__c/fields/Budget_Prediciton__c.field-meta.xml
<CustomField>
    <fullName>Budget_Prediciton__c</fullName>
    <description>This calculated field indicates the potential revenue by the given forecast. In this field, the budget price for the next fiscal year is taken into account and it&apos;s only populated if the FUP lies in the next year.</description>
    <formula>IF ( YEAR(TODAY()) + 1 = YEAR( History_Month__c ),  

IF( Forecast_Unit__r.Budget_Price_next_FY__c = 0,  Forecast_Unit__r.Actual_Sales_Price__c* Forecast__c , Forecast_Unit__r.Budget_Price_next_FY__c* Forecast__c ),

0

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget prediction next FY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>