force-app/main/default/objects/Forecast_Unit_Period__c/fields/Budget_Prediciton_next_FY_Optimum__c.field-meta.xml
<CustomField>
    <fullName>Budget_Prediciton_next_FY_Optimum__c</fullName>
    <formula>IF ( YEAR(TODAY()) + 1 = YEAR( History_Month__c ),  

IF( Forecast_Unit__r.Budget_Price_next_FY__c = 0,  Forecast_Unit__r.Actual_Sales_Price__c, Forecast_Unit__r.Budget_Price_next_FY__c) * (1 + Forecast_Unit__r.Upside_Potential__c )* Forecast__c,

0

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget prediction next FY Optimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>