force-app/main/default/objects/Forecast_Unit_Period__c/fields/Budget_prediction_CHF__c.field-meta.xml
<CustomField>
    <fullName>Budget_prediction_CHF__c</fullName>
    <formula>IF ( YEAR(TODAY()) + 1 = YEAR( History_Month__c ),  


IF( Forecast_Unit__r.Budget_Price_next_FY__c = 0, Forecast_Unit__r.Actual_Sales_Price__c, Forecast_Unit__r.Budget_Price_next_FY__c)
* Forecast__c
*
CASE( CurrencyIsoCode ,
&quot;USD&quot;,0.995,
&quot;EUR&quot;,1.115,
&quot;JPY&quot;, 0.0089,
1
)
, 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget prediction next FY  CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>