force-app/main/default/objects/Forecast_Unit_Period__c/fields/Budget_Sales_Optimum__c.field-meta.xml
<CustomField>
    <fullName>Budget_Sales_Optimum__c</fullName>
    <formula>IF( Forecast_Unit__r.Budget_Price__c = 0 ,
IF( Forecast_Unit__r.Actual_Sales_Price__c = 0 , Forecast_Unit__r.Budget_Price_next_FY__c , Forecast_Unit__r.Actual_Sales_Price__c ),
Forecast_Unit__r.Budget_Price__c) * Budget_Optimum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Sales Optimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>