force-app/main/default/objects/Forecast_Unit_Period__c/fields/Chinese_Domestic_Market__c.field-meta.xml
<CustomField>
    <fullName>Chinese_Domestic_Market__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Order served from China. Updated when Chinese Domestic Market in the related Order is checked/unchecked.</description>
    <inlineHelpText>Order served from China. Updated when Chinese Domestic Market in the related Order is checked/unchecked.</inlineHelpText>
    <label>Chinese Domestic Market</label>
    <type>Checkbox</type>
</CustomField>