force-app/main/default/objects/Forecast_Unit_Period__c/fields/Contribution_prediction_next_FY__c.field-meta.xml
<CustomField>
    <fullName>Contribution_prediction_next_FY__c</fullName>
    <formula>IF ( YEAR(TODAY()) + 1 = YEAR( History_Month__c ),

(IF( Forecast_Unit__r.Budget_Price_next_FY__c = 0, Forecast_Unit__r.Actual_Sales_Price__c, Forecast_Unit__r.Budget_Price_next_FY__c)
-  Forecast_Unit__r.Product__r.COGS_1__c )
* Forecast__c 
,

0

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribution prediction next FY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>