force-app/main/default/objects/Forecast_Unit_Period__c/fields/Currency_Missmatch__c.field-meta.xml
<CustomField>
    <fullName>Currency_Missmatch__c</fullName>
    <formula>TEXT(CurrencyIsoCode) &lt;&gt; TEXT(Forecast_Unit__r.CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Missmatch</label>
    <type>Checkbox</type>
</CustomField>