force-app/main/default/objects/Forecast_Unit_Period__c/fields/Delta_FC_OB_Sales_CHF__c.field-meta.xml
<CustomField>
    <fullName>Delta_FC_OB_Sales_CHF__c</fullName>
    <formula>Forecast_Sales_CHF__c  - Actual_Sales_CHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For reporting</inlineHelpText>
    <label>Delta FC - OB - Sales CHF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>