force-app/main/default/objects/Forecast_Unit_Period__c/fields/FCUPReference_ext_ID__c.field-meta.xml
<CustomField>
    <fullName>FCUPReference_ext_ID__c</fullName>
    <externalId>true</externalId>
    <label>FCUPReference ext ID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>