force-app/main/default/objects/Forecast_Unit_Period__c/fields/Fiscal_Period2__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Period2__c</fullName>
    <formula>RIGHT(TEXT(YEAR(History_Month__c )),4)&amp;&quot;-&quot;&amp; LPAD( TEXT(MONTH(History_Month__c)), 2, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Period2</label>
    <type>Text</type>
</CustomField>