force-app/main/default/objects/Forecast_Unit_Period__c/fields/Fiscal_Period__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Period__c</fullName>
    <formula>&quot;Fiscal &quot;&amp;TEXT(MONTH(History_Month__c)) &amp;&quot;-&quot;&amp;RIGHT(TEXT(YEAR(History_Month__c )),4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Period</label>
    <type>Text</type>
</CustomField>