force-app/main/default/objects/Forecast_Unit_Period__c/fields/Flagged_item__c.field-meta.xml
<CustomField>
    <fullName>Flagged_item__c</fullName>
    <formula>IF(Forecast_Unit__r.Flagged_item__c,&quot;Yes&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flagged item</label>
    <type>Text</type>
</CustomField>