force-app/main/default/objects/Forecast_Unit_Period__c/fields/Forecast_2__c.field-meta.xml
<CustomField>
    <fullName>Forecast_2__c</fullName>
    <description>Forecast 2 for future use (is already included in Analytic Snapshot)</description>
    <formula>IF( History_Month__c &lt; DATE( YEAR(TODAY()) , MONTH(TODAY()) ,15) ,
Actual_Sales__c,
IF( History_Month__c = DATE( YEAR(TODAY()) , MONTH(TODAY()) ,15) ,
MAX((Actual_Sales__c + Order_Book__c), Forecast_manual__c ),
MAX( Order_Book__c, BLANKVALUE(Forecast_manual__c , MAX(Order_Book__c,Forecast_3__c)))
)
)</formula>
    <label>Forecast 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>