force-app/main/default/objects/Forecast_Unit_Period__c/fields/Forecast_2_sales__c.field-meta.xml
<CustomField>
    <fullName>Forecast_2_sales__c</fullName>
    <formula>IF( History_Month__c &lt; DATE( YEAR(TODAY()) , MONTH(TODAY()) ,15) ,
Value_Order_Sales__c,

IF( Forecast_Unit__r.Actual_Sales_Price__c = 0 , Forecast_Unit__r.Budget_Price__c ,Forecast_Unit__r.Actual_Sales_Price__c )
* Forecast_2__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast 2 Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>