force-app/main/default/objects/Forecast_Unit_Period__c/fields/Forecast_2_Sales_CHF__c.field-meta.xml
<CustomField>
    <fullName>Forecast_2_Sales_CHF__c</fullName>
    <formula>IF( History_Month__c &lt; DATE( YEAR(TODAY()) , MONTH(TODAY()) ,15) ,

Actual_Sales_CHF__c
,

IF( Forecast_Unit__r.Actual_Sales_Price__c = 0 , Forecast_Unit__r.Budget_Price__c ,Forecast_Unit__r.Actual_Sales_Price__c )
* Forecast_2__c
*
CASE( CurrencyIsoCode ,
&quot;USD&quot;,$User.USDtoCHF__c,
&quot;EUR&quot;,$User.EURtoCHF__c,
&quot;JPY&quot;, $User.JPYtoCHF__c ,
1
)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast 2 Sales CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>