force-app/main/default/objects/Forecast_Unit_Period__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <formula>IF( History_Month__c &lt; DATE( YEAR(TODAY()) , MONTH(TODAY()) ,15) ,
Actual_Sales__c,

MAX( Actual_Sales__c , BLANKVALUE(Forecast_manual__c , MAX(Actual_Sales__c + Order_Book__c,Forecast_3__c)))

)</formula>
    <label>Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>