force-app/main/default/objects/Forecast_Unit_Period__c/fields/Forecast_Budget_Price_Sales__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Budget_Price_Sales__c</fullName>
    <formula>IF( Forecast_Unit__r.Budget_Price__c &gt; 0, Forecast_Unit__r.Budget_Price__c *  Forecast__c ,  Forecast_Unit__r.Actual_Sales_Price__c * Forecast__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Budget Price Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>