force-app/main/default/objects/Forecast_Unit_Period__c/fields/Forecast_Budget_Price_Sales_CHF__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Budget_Price_Sales_CHF__c</fullName>
    <formula>Case (year( History_Month__c ),
2013,
CASE ( CurrencyIsoCode,
&quot;USD&quot;, 0.95,
&quot;EUR&quot;, 1.20,
&quot;JPY&quot;, 0.012, 0),
2014,
CASE ( CurrencyIsoCode,
&quot;USD&quot;, 0.93,
&quot;EUR&quot;, 1.20,
&quot;JPY&quot;, 0.00924, 0),
2015,
CASE ( CurrencyIsoCode,
&quot;USD&quot;, 0.974,
&quot;EUR&quot;, 1.065,
&quot;JPY&quot;, 0.008, 0),
2016,
CASE ( CurrencyIsoCode,
&quot;USD&quot;, 0.9681,
&quot;EUR&quot;, 1.08,
&quot;JPY&quot;, 0.007856, 0),
2017,
CASE ( CurrencyIsoCode,
&quot;USD&quot;, 1.00,
&quot;EUR&quot;, 1.10,
&quot;JPY&quot;, 0.0095, 0),
2018,
CASE ( CurrencyIsoCode,
&quot;USD&quot;, 1.00,
&quot;EUR&quot;, 1.16,
&quot;JPY&quot;, 0.0088, 0),
0)
*  Forecast_Budget_Price_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Budget Price Sales CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>