force-app/main/default/objects/Forecast_Unit_Period__c/fields/Forecast_Contribution_CHF__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Contribution_CHF__c</fullName>
    <formula>Forecast_Contribution__c 
*
CASE( CurrencyIsoCode ,
&quot;USD&quot;,$User.USDtoCHF__c,
&quot;EUR&quot;,$User.EURtoCHF__c,
&quot;JPY&quot;, $User.JPYtoCHF__c ,
1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Forecast contribution converted to CHF</inlineHelpText>
    <label>Forecast Contribution CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>