force-app/main/default/objects/Forecast_Unit_Period__c/fields/Forecast_Copy__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Copy__c</fullName>
    <description>Created to be used for roll-up summary in the Forecast Unit</description>
    <label>Forecast Copy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>