force-app/main/default/objects/Forecast_Unit_Period__c/fields/Forecast_manual__c.field-meta.xml
<CustomField>
    <fullName>Forecast_manual__c</fullName>
    <inlineHelpText>Forecast based on customer input. Empty: system forecast will be used.</inlineHelpText>
    <label>Manual Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>