force-app/main/default/objects/Forecast_Unit_Period__c/fields/Forecast_Optimum__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Optimum__c</fullName>
    <formula>if ( History_Month__c  &gt; today(), Forecast__c * (1 +  Forecast_Unit__r.Upside_Potential__c ), Forecast__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Forecast with upside potential.</inlineHelpText>
    <label>Forecast Optimum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>