force-app/main/default/objects/Forecast_Unit_Period__c/fields/Forecast_Period__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Period__c</fullName>
    <formula>IF(((
	MONTH(History_Month__c) - MONTH(TODAY())
	+
	(YEAR(History_Month__c) - YEAR (TODAY()))*12
	)	
&gt; -7)
&amp;&amp;	((
	MONTH(History_Month__c) - MONTH(TODAY())
	+
	(YEAR(History_Month__c) - YEAR (TODAY()))*12
	)
&lt; 13)
,	
1	
,	
0	
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 if History Month within 6 months in the past or 12 months in the future</inlineHelpText>
    <label>Forecast Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>