force-app/main/default/objects/Forecast_Unit_Period__c/fields/Forecast_Sales_Copy__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Sales_Copy__c</fullName>
    <description>Created to be used for roll-up summary in the Forecast Unit</description>
    <label>Forecast Sales Copy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>