force-app/main/default/objects/Forecast_Unit_Period__c/fields/Forecast_Sales_Optimum__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Sales_Optimum__c</fullName>
    <formula>Forecast_Sales__c * (1 +  Forecast_Unit__r.Upside_Potential__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Forecast sales in local currency with upside potential.</inlineHelpText>
    <label>Forecast Sales Optimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>