force-app/main/default/objects/Forecast_Unit_Period__c/fields/Forecast_Sales_Optimum_CHF__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Sales_Optimum_CHF__c</fullName>
    <formula>Forecast_Sales_CHF__c * (1 +  Forecast_Unit__r.Upside_Potential__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Forecast sales in with upside potential (in CHF)</inlineHelpText>
    <label>Forecast Sales Optimum CHF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>