force-app/main/default/objects/Forecast_Unit_Period__c/fields/Forecast_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Snapshot__c</fullName>
    <formula>IF( Forecast_Unit__r.AVG_Sales_Last_3_Months__c  &gt;0 
&amp;&amp; LEN( Product_Code__c )&gt;0 
&amp;&amp; History_Month__c &gt; TODAY() - 30
&amp;&amp; History_Month__c &lt; TODAY() + 240
,
&quot;yes&quot;
,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Snapshot</label>
    <type>Text</type>
</CustomField>