force-app/main/default/objects/Forecast_Unit_Period__c/fields/Forecast_Unit__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Unit__c</fullName>
    <label>Forecast Unit</label>
    <referenceTo>Forecast_Unit__c</referenceTo>
    <relationshipLabel>Forecast Unit Periods</relationshipLabel>
    <relationshipName>Forecast_Unit_Periods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>