force-app/main/default/objects/Forecast_Unit_Period__c/fields/Frame_Order__c.field-meta.xml
<CustomField>
    <fullName>Frame_Order__c</fullName>
    <label>Frame Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>