force-app/main/default/objects/Forecast_Unit_Period__c/fields/FUP_Sales_in_USD_at_const_exch_rate__c.field-meta.xml
<CustomField>
    <fullName>FUP_Sales_in_USD_at_const_exch_rate__c</fullName>
    <formula>CASE(CurrencyIsoCode,
&quot;EUR&quot;, $Setup.Constant_Exchange_Rates__c.EUR2CHF__c ,
&quot;JPY&quot;,  $Setup.Constant_Exchange_Rates__c.JPY2CHF__c ,
&quot;CHF&quot;,  $Setup.Constant_Exchange_Rates__c.USD2CHF__c ,
1.00) * Forecast_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FUP Sales in USD at const exch rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>