force-app/main/default/objects/Forecast_Unit_Period__c/fields/Future_Month__c.field-meta.xml
<CustomField>
    <fullName>Future_Month__c</fullName>
    <inlineHelpText>1 if month greater or equal actual month, 0 else. Set via workflow.</inlineHelpText>
    <label>Future Month</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>